@@ -1,5 +1,10 @@
 2006-09-15  Carlos Garnacho  <carlosg@gnome.org>
 
+	* ServicesConfig.pm, Init/Services.pm: transform the status parameter
+	into an enum-like value.
+
+2006-09-15  Carlos Garnacho  <carlosg@gnome.org>
+
 	* UsersConfig.pm, GroupsConfig.pm, Users/Users.pm, Users/Groups.pm:
 	add an independent identification number to users and groups, this 
 	number should not be modified in the other communication side (GID 
